@@ -1,4 +1,10 @@
 version 0.4
+* New file "sunterlib.scm" contains the old "interfaces.scm" and
+  "packages.scm" ("interfaces.scm" and "packages.scm" are deprecated
+  and will be removed in a future release).
+* New file "sunterlib-s48.scm" contains the old "s48-interfaces.scm"
+  and "s48-packages.scm" ("s48-interfaces.scm" and "s48-packages.scm"
+  are deprecated and will be removed in a future release).
 * Added display-continuation to interaction
 
 version 0.3 - 2003-4-16
